--- a/iframe.html
+++ b/iframe.html
@@ -1,44 +1,41 @@
 <html>
 <head>
 
+<title>iframr</title>
+
 <style>
 body {
+    font-family: Verdana, sans-serif;
     margin: 0;
     padding: 0;
 }
 
-.frame {
-    width: 49%;
-    height: 100%;
-}
+.header { width: 100%; }
+
+.frame { width: 50%; height: 100%; }
 iframe {
     width: 100%;
     height: 100%;
     overflow: auto;
+    position: relative;
 }
 
-span {
-    width: 10em;
-}
-input, span {
-    margin: 1em;
-}
-
-input[type="text"] {
-    width: 200px;
-}
+input, span { margin: 1em; }
+input[type="text"] { width: 50%; }
 
 .xfactor {
     text-align: center;
     width: 421px;
     height: 109px;
-    padding: 20px 0 0 0;
+    padding: 27px 0 0 0;
     background: transparent url(xfactor_bg.png) no-repeat top left;
-    font-size: 36pt;
+    font-size: 36px;
     text-decoration: shadow;
     position: absolute;
     top: 40%;
-    left: 10%;
+    left: 50%;
+    margin-left: -211px;
+    z-index: 10;
 }
 .good {
     color: #C1D82F;
@@ -52,19 +49,53 @@ input[type="text"] {
 
 var start = [new Date(), new Date()];
 var duration = [0, 0];
+var runs = new Array();
+
+if(!String.prototype.startsWith){
+    String.prototype.startsWith = function (str) {
+        return !this.indexOf(str);
+    }
+}
 
 load_frame = function(i, j) {
+
+    // Add http method if it is not there
+    var url = $('#url'+i).val();
+    if (!url.startsWith('http://')) {
+        url = 'http://' + url;
+        $('#url'+i).val(url);
+    }
+
     // Starting timestamp
     start[i] = new Date();
     duration[i] = 0; 
 
     // Set frame address to whatever's in the input box
-    $('#frame' + i).attr('src', $('#url' + i).val());
+    $('#frame' + i).attr('src', url);
 
     // Update loading message
-    $('#time' + i).text('loading...');
+    $('#time' + i).html('<blink>loading...</blink>');
+
+    // Clear xfactor box
+    $('#x' + i).html('');
+    $('#x' + j).html('');
 };
 
+display_runs = function() {
+    var msg = '<ul>';
+    $.each(runs, function(key, value) {
+        msg += '<li>' + String(key);
+        msg += '<ul>';
+        $.each(value, function(key, value) {
+            msg += '<li>' + String(value) + '</li>';
+            alert('blah');
+        });
+        msg += '</ul>';
+        msg += '</li>';
+    });
+    msg += '</ul>';
+    $('#header').text(msg);
+}
 after_load = function(i, j) {
 
     // Grab the ending timestamp
@@ -75,40 +106,41 @@ after_load = function(i, j) {
     duration[i] = dur;
     $('#time' + i).text(dur + ' ms');
 
-    // Update our url to whatever we landed at (including redirect)
-    var us = frames[i].location.href;
-    $('#url' + i).val(us);
-
-    // Sync the other frame if we have it turned on
-    if ($('#sync').val() === 'on') {
-
-        // Find the relative url
-        var them = frames[j].location.href;
-        var root = them.indexOf($.url.setUrl(them).attr('relative'));
-        var rel = them.substr(0, root) + $.url.setUrl(us).attr('relative');
-
-        // If they're not there already, take them there
-        if (rel != them) {
-            $('#url' + j).val(rel);
-            load_frame(i, j);
-            load_frame(j, i);
-        }
-    }
-
     // Calculate benefit
     if (duration[i] && duration[j]) {
+        /*
         if (duration[i] < duration[j]) {
             var benefit = duration[j]/duration[i];
-            $('#x' + i).html('<div class="xfactor">' + + benefit.toFixed(2) + ' &times; faster</div>');
+            $('#x' + i).html('<div class="xfactor">' + + benefit.toFixed(2) + ' &times; faster &rarr;</div>');
             $('#x' + j).html('');
         }
         else {
+        */
             var benefit = duration[i]/duration[j];
-            $('#x' + j).html('<div class="xfactor">' + + benefit.toFixed(2) + ' &times; faster</div>');
+            if (i === 0) {
+                $('#x' + j).html('<div class="xfactor">' + + benefit.toFixed(2) + ' &times; faster &rarr;</div>');
+            } else {
+                $('#x' + j).html('<div class="xfactor">&larr; ' + + benefit.toFixed(2) + ' &times; faster</div>');
+            }
             $('#x' + i).html('');
-        }
+
+            /*
+            // Record result
+            var pair = $('#url'+i).val() + ':' + $('#url'+j).val();
+            if (!runs[pair])
+                runs[pair] = new Array();
+
+            runs[pair].push([duration[i], duration[j], benefit]);
+            display_runs();
+            */
+        //}
     }
 
+};
+
+reload_frames = function () {
+    load_frame(1, 0);
+    load_frame(0, 1);
 };
 
 $(window).ready(function(){
@@ -117,9 +149,9 @@ $(window).ready(function(){
     $('#frame0').load(function() { after_load(0, 1); });
     $('#frame1').load(function() { after_load(1, 0); });
 
-    $('#go').click(function () {
-        load_frame(1, 0);
-        load_frame(0, 1);
+    $('#go').click(reload_frames);
+    $('#url0, #url1').keyup(function (e) {
+        if (e.keyCode == 13) {reload_frames();}
     });
 });
 </script>
@@ -128,31 +160,33 @@ $(window).ready(function(){
 <body>
 
 <div id="header" style="width:100%;">
-<form>
-<label for="url0">URL1:</label>
-<input id="url0" type="text" value="http://webdev.fastsoft.com" />
-<span id="time0"></span>
-
-<label for="url1">URL2:</label>
-<input id="url1" type="text" value="http://www.fastsoft.com"/>
-<span id="time1"></span>
-
-<input id="go" value="Go" type="button" />
-
-<label for="sync">sync browsing</label>
-<input id="sync" type="checkbox" checked="checked" />
-</form>
 </div>
 
 <div class="frame" id="div0" style="float:left">
-<span id="x0" class="good"></span>
-<iframe id="frame0" src="about:blank">one</iframe>
+
+    <label for="url0">URL:</label>
+    <!--<input id="url0" type="text" value="http://webdev.fastsoft.com" />-->
+    <input id="url0" type="text" value="jquery.min.js" tabindex=1 />
+    <span id="time0"></span>
+
+    <span id="x0" class="good"></span>
+    <iframe id="frame0">one</iframe>
+
 </div>
 
 <div class="frame" id="div1" style="float:right">
-<span id="x1" class="good"></span>
-<iframe id="frame1" src="about:blank">two</iframe>
+
+    <label for="url1">URL:</label>
+    <!--<input id="url1" type="text" value="http://www.fastsoft.com"/>-->
+    <input id="url1" type="text" value="jquery.url.js" tabindex=2 />
+    <span id="time1"></span>
+    <input id="go" value="Go" type="submit" tabindex=3 />
+
+    <span id="x1" class="good"></span>
+    <iframe id="frame1">two</iframe>
+
 </div>
+
 
 </body>
 </html>
