Change the title and git rid of the labels on the url bars

--- a/iframe.html
+++ b/iframe.html
@@ -1,7 +1,7 @@
 <html>
 <head>
 
-<title>iframr</title>
+<title>which loads faster?</title>
 
 <style>
 body {
@@ -20,7 +20,7 @@ iframe {
     position: relative;
 }
 
-input, span { margin: 1em; }
+input, span { margin: 1ex }
 input[type="text"] { width: 50%; }
 
 .xfactor {
@@ -167,7 +167,6 @@ $(window).ready(function(){
 
 <div class="frame" id="div0" style="float:left">
 
-    <label for="url0">URL:</label>
     <input id="url0" type="text" value="google.com" tabindex=1 />
     <span id="time0"></span>
 
@@ -178,7 +177,6 @@ $(window).ready(function(){
 
 <div class="frame" id="div1" style="float:right">
 
-    <label for="url1">URL:</label>
     <input id="url1" type="text" value="bing.com" tabindex=2 />
     <span id="time1"></span>
     <input id="go" value="Go" type="submit" tabindex=3 />
