--- a/iframe.html
+++ b/iframe.html
@@ -6,13 +6,20 @@
 <style>
 body {
     font-family: Verdana, sans-serif;
+    font-size: 12px;
     margin: 0;
     padding: 0;
 }
 
-.header { width: 100%; }
+#header { width: 100%; padding: 1ex;}
 
-.frame { width: 50%; height: 100%; }
+#features { text-align:center; }
+#features a { padding-left: 1ex; }
+#gobar { display: block; width: 100%; height: 40px;  }
+#gobar div { width: 50%; position: absolute; }
+#gobar input[type="text"] { width: 70%; margin: 10px; padding: 6px; }
+
+.frame { width: 50%; height: 100%; position: relative;}
 iframe {
     width: 100%;
     height: 100%;
@@ -20,33 +27,48 @@ iframe {
     position: relative;
 }
 
-input, span { margin: 1ex }
-input[type="text"] { width: 50%; }
+.load_time { 
+    margin: 1em; 
+    padding: 1ex !important;
+    position: absolute !important; 
+    top: 30px; 
+    right: 30px;
+    z-index: 10; 
+}
 
-.xfactor {
-    text-align: center;
+#xfactor {
     width: 421px;
-    height: 109px;
-    padding: 27px 0 0 0;
-    background: transparent url(xfactor_bg.png) no-repeat top left;
-    font-size: 36px;
-    text-decoration: shadow;
     position: absolute;
     top: 40%;
     left: 50%;
     margin-left: -211px;
     z-index: 10;
 }
+.xfactor {
+    height: 109px;
+    text-align: center;
+    padding: 27px 0 0 0;
+    background: transparent url(xfactor_bg.png) no-repeat top left;
+    font-size: 36px;
+    text-decoration: shadow;
+}
 .good {
     color: #C1D82F;
     font-weight: bold;
 }
+
+#repeat-form ul li { list-style: none; margin: 5px; }
+#race-form table { text-align: center; }
+#race-form input[type="text"] {
+    width: 250px;
+}
+
 </style>
 
 <link type="text/css" href="css/smoothness/jquery-ui-1.8.custom.css" rel="stylesheet" />  
-<script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.4.2/jquery.min.js"></script>
+<script type="text/javascript" src="js/jquery-1.4.2.min.js"></script>
 <script type="text/javascript" src="js/jquery-ui-1.8.custom.min.js"></script>
-<script type="text/javascript" src="jquery.url.js"></script>
+<script type="text/javascript" src="js/jquery.url.js"></script>
 
 <script>
 
@@ -64,7 +86,7 @@ load_frame = function(i, j) {
 
     // Add http method if it is not there
     var url = $('#url'+i).val();
-    if (!url.startsWith('http://')) {
+    if (url.indexOf('://') == -1) {
         url = 'http://' + url;
         $('#url'+i).val(url);
     }
@@ -83,8 +105,7 @@ load_frame = function(i, j) {
     $('#time' + i).html('<blink>loading...</blink>');
 
     // Clear xfactor box
-    $('#x' + i).html('');
-    $('#x' + j).html('');
+    $('#xfactor').html('');
 };
 
 display_runs = function() {
@@ -114,34 +135,28 @@ after_load = function(i, j) {
 
     // Calculate benefit
     if (duration[i] && duration[j]) {
-        /*
-        if (duration[i] < duration[j]) {
-            var benefit = duration[j]/duration[i];
-            $('#x' + i).html('<div class="xfactor">' + + benefit.toFixed(2) + ' &times; faster &rarr;</div>');
-            $('#x' + j).html('');
-        }
-        else {
-        */
-            var benefit = duration[i]/duration[j];
+        var benefit = duration[i]/duration[j];
+        var b = benefit.toPrecision(2);
+        if (b === '1.0') {
+            $('#xfactor').html('<div class="xfactor">= it\'s a tie! =</div>');
+        } else {
             if (i === 0) {
-                $('#x' + j).html('<div class="xfactor">' + + benefit.toFixed(2) + ' &times; faster &rarr;</div>');
+                $('#xfactor').html('<div class="xfactor">'+b+' &times; faster &rarr;</div>');
             } else {
-                $('#x' + j).html('<div class="xfactor">&larr; ' + + benefit.toFixed(2) + ' &times; faster</div>');
+                $('#xfactor').html('<div class="xfactor">&larr; '+b+' &times; faster</div>');
             }
-            $('#x' + i).html('');
+        }
+        /*
+        // Record result
+        var pair = $('#url'+i).val() + ':' + $('#url'+j).val();
+        if (!runs[pair])
+            runs[pair] = new Array();
 
-            /*
-            // Record result
-            var pair = $('#url'+i).val() + ':' + $('#url'+j).val();
-            if (!runs[pair])
-                runs[pair] = new Array();
-
-            runs[pair].push([duration[i], duration[j], benefit]);
-            display_runs();
-            */
-        //}
+        runs[pair].push([duration[i], duration[j], benefit]);
+        display_runs();
+        */
     }
-
+    $('#url0').focus().select();
 };
 
 reload_frames = function () {
@@ -160,9 +175,30 @@ $(window).ready(function(){
         if (e.keyCode == 13) {reload_frames();}
     });
 
+    $("#repeat-form").dialog({
+        autoOpen: false, width: 550, modal: true, top: '20%',
+        title: 'Repeat',
+        buttons: {
+            'Go': function() {
+                var bValid = true;
+                var value = $('#times input[name="times"]:checked').val();
+                
+                if (bValid) {
+                    $(this).dialog('close');
+                }
+            },
+            'Cancel': function() {
+                $(this).dialog('close');
+            }
+        },
+        close: function() {
+        }
+    });
+    //$('#times').buttonset();
 
-    $("#multiple-form").dialog({
-        autoOpen: false, height: 300, width: 350, modal: true,
+    $("#race-form").dialog({
+        autoOpen: false, width: 550, modal: true,
+        title: 'Race!',
         buttons: {
             'Go': function() {
                 var bValid = true;
@@ -178,21 +214,90 @@ $(window).ready(function(){
         }
     });
 
-    $('#go').button();
-    $('#repeat').button();
-    $('#multiple').button().click(function () { $('#multiple-form').dialog('open'); });
+    $('#repeat').click(function () { $('#repeat-form').dialog('open'); });
+    $('#race').click(function () { $('#race-form').dialog('open'); });
+
+    $('button').button();
 });
 </script>
 
 </head>
 <body>
 
-<div id="header" style="width:100%;">
+<div id="header">
+
+    <div id="features">
+        <a id="repeat" href="#" tabindex=4 >Repeat</a>
+        <a id="race" href="#" tabindex=5 >Race</a>
+        <a id="cache" href="#" tabindex=4 >Clear my cache</a>
+    </div>
+
+    <div id="gobar">
+    <div style="left:0;">
+
+        <input id="url0" type="text" class="text ui-widget-content ui-corner-all" value="google.com" tabindex=1 />
+
+    </div>
+    <div style="right: 0;">
+
+        <input id="url1" type="text" class="text ui-widget-content ui-corner-all" value="bing.com" tabindex=2 />
+        <button id="go" tabindex=3 >GO</button>
+
+    </div>
+    </div>
+
 </div>
 
-<div id="multiple-form" style="display:none;">
-    <p>Multiple pages</p>
+<div id="xfactor" class="good"> </div>
+
+<div class="frame" id="div0" style="float:left">
+
+    <button id="time0" class="load_time" tabindex=0></button>
+    <iframe id="frame0">one</iframe>
+
+</div>
+
+<div class="frame" id="div1" style="float:right">
+
+    <button id="time1" class="load_time"></button>
+    <iframe id="frame1">two</iframe>
+
+</div>
+
+<div id="repeat-form" style="display:none;">
+    <p>
+        How many times?
+    </p>
+
+    <ul id="times">
+        <li>
+            <input type="radio" name="times" id="5times" checked="checked" value="5" /><label for="5times">5 times</label>
+        </li>
+        <li>
+            <input type="radio" name="times" id="10times" value="10" /><label for="10times">10 times</label>
+        </li>
+        <li>
+            <input type="radio" name="times" id="custom" value="custom" /><label for="custom">Custom</label>
+            <input type="text" id="cutom_text" for="custom" />
+        </li>
+    </ul>
+    <p>
+        At the end, you'll see which was faster on average.
+    </p>
+</div>
+
+
+<div id="race-form" style="display:none;">
+    <p>
+        Load multiple pages, one after another. The sequence that
+        finishes fastest wins!
+    </p>
+
     <table>
+    <tr>
+        <th>Sequence 1</th>
+        <th>Sequence 2</th>
+    </tr>
     <tr>
         <td><input type="text" id="url0-0" class="text ui-widget-content ui-corner-all" /></td>
         <td><input type="text" id="url0-1" class="text ui-widget-content ui-corner-all" /></td>
@@ -202,29 +307,6 @@ $(window).ready(function(){
         <td><input type="text" id="url1-1" class="text ui-widget-content ui-corner-all" /></td>
     </tr>
     </table>
-</div>
-
-<div class="frame" id="div0" style="float:left">
-
-    <input id="url0" type="text" class="text ui-widget-content ui-corner-all" value="google.com" tabindex=1 />
-    <span id="time0"></span>
-
-    <span id="x0" class="good"></span>
-    <iframe id="frame0">one</iframe>
-
-</div>
-
-<div class="frame" id="div1" style="float:right">
-
-    <input id="url1" type="text" class="text ui-widget-content ui-corner-all" value="bing.com" tabindex=2 />
-    <span id="time1"></span>
-    <button id="go" tabindex=3 >GO</button>
-    <button id="repeat" tabindex=4 >Repeat</button>
-    <button id="multiple" tabindex=5 >Multiple</button>
-
-    <span id="x1" class="good"></span>
-    <iframe id="frame1">two</iframe>
-
 </div>
 
 
