Some refactoring of the dialog boxes. Added a textbox where users can grab the data they gathered.

--- a/iframe.html
+++ b/iframe.html
@@ -19,7 +19,7 @@
     <div id="features">
         <a id="repeat" href="#" tabindex=4 >Repeat</a>
         <a id="race" href="#" tabindex=5 >Race</a>
-        <a id="cache" href="#" tabindex=6 >Clear my cache</a>
+        <a id="data" href="#" tabindex=6 >Grab my data</a>
     </div>
 
     <div id="gobar">
@@ -77,7 +77,7 @@
         </li>
     </ul>
     <p>
-        At the end, you'll see which was faster on average.
+        At the end, you'll see which page loaded faster on average.
     </p>
 </div>
 
@@ -88,6 +88,9 @@
         finishes fastest wins!
     </p>
 
+    <h2> Coming Soon. </h2>
+    <p>  Be patient. </p>
+<!--
     <table>
     <tr>
         <th>Sequence 1</th>
@@ -102,10 +105,14 @@
         <td><input type="text" id="url1-1" class="text ui-widget-content ui-corner-all" /></td>
     </tr>
     </table>
+-->
 </div>
 
-<div id="cache-form">
-
+<div id="data-form" style="display: none;">
+    <p>
+        What other formats would you want this in?
+    </p>
+    <textarea></textarea>
 </div>
 
 </body>
