--- a/iframe.html
+++ b/iframe.html
@@ -1,10 +1,10 @@
 <html>
 <head>
 
-    <title>which loads faster?</title>
+    <title>Which loads faster?</title>
 
     <link type="text/css" href="css/screen.css" rel="stylesheet" /> 
-    <link type="text/css" href="css/smoothness/jquery-ui-1.8.custom.css" rel="stylesheet" />  
+    <link type="text/css" href="css/sunny/jquery-ui-1.8.custom.css" rel="stylesheet" />  
 
     <script type="text/javascript" src="js/jquery-1.4.2.min.js"></script>
     <script type="text/javascript" src="js/jquery-ui-1.8.custom.min.js"></script>
