Splash screen! Has some example matchups to get people excited. :)

--- a/iframe.html
+++ b/iframe.html
@@ -20,6 +20,7 @@
         <a id="repeat" href="#" tabindex=4 >Repeat</a>
         <a id="race" href="#" tabindex=5 >Race</a>
         <a id="data" href="#" tabindex=6 >Grab my data</a>
+        <a id="splash-link" href="#" tabindex=4 >Splash screen</a>
     </div>
 
     <div id="gobar">
@@ -113,6 +114,29 @@
         What other formats would you want this in?
     </p>
     <textarea></textarea>
+</div>
+
+<div id="splash" style="display: none;">
+    <p>
+        Pages compete head-to-head
+        in your browser to see who's fastest!
+    </p>
+    <p>
+        Try one of these epic matchups to get started:
+    </p>
+    <div id="matchups">
+        <button name="google.com:bing.com">Google vs Bing</button>
+        <button name="microsoft.com:apple.com">Microsoft vs Apple</button>
+        <button name="www.amazon.com/s/ref=nb_sb_noss?url=search-alias%3Daps&field-keywords=shoes&x=0&y=0:www.shopzilla.com/shoes/search">Amazon vs Shopzilla: SHOES!</button>
+        <button name="omg.com:tmz.com">TMZ vs OMG!</button>
+    </div>
+    <p>
+        Coming Soon:
+    </p>
+    <ul>
+        <li>Race multiple pages in a row.</li>
+        <li>API for gathering the results.</li>
+    </ul>
 </div>
 
 </body>
