Give at least a warning when framebusters would otherwise break us.

--- a/iframe.html
+++ b/iframe.html
@@ -139,5 +139,20 @@
     </ul>
 </div>
 
+<div id="framebuster" style="display: none;">
+    <p>
+        It looks like one of the websites you're trying to load
+        <span id="framebuster_name"></span>
+        does not want their content to be displayed inside an
+        iframe, and is actively trying to bust itself out.
+    </p>
+    <p>
+        Because of this, it's going to be hard to get
+        an accurate comparison.
+        Please either speak to the authors of the website or try
+        a different matchup.
+    </p>
+</div>
+
 </body>
 </html>
