--- a/iframe.html
+++ b/iframe.html
@@ -9,6 +9,7 @@
     <script type="text/javascript" src="js/jquery-1.4.2.min.js"></script>
     <script type="text/javascript" src="js/jquery-ui-1.8.custom.min.js"></script>
     <script type="text/javascript" src="js/jquery.url.js"></script>
+    <script type="text/javascript" src="js/jquery.hotkeys.js"></script>
     <script type="text/javascript" src="js/ui.js"></script>
 
 </head>
