Preliminary version of race feature.

--- a/iframe.html
+++ b/iframe.html
@@ -93,28 +93,35 @@
 
 <div id="race-form" style="display:none;">
     <p>
-        Load multiple pages, one after another. The sequence that
+        Load multiple pages, one after another. The side that
         finishes fastest wins!
     </p>
-
-    <h2> Coming Soon. </h2>
-    <p>  Be patient. </p>
-<!--
     <table>
     <tr>
-        <th>Sequence 1</th>
-        <th>Sequence 2</th>
+        <th>Left side URLs</th>
+        <th>Right side URLs</th>
     </tr>
     <tr>
-        <td><input type="text" id="url0-0" class="text ui-widget-content ui-corner-all" /></td>
-        <td><input type="text" id="url0-1" class="text ui-widget-content ui-corner-all" /></td>
+        <td><input type="text" id="l0" class="race_url text ui-widget-content ui-corner-all" /></td>
+        <td><input type="text" id="r0" class="race_url text ui-widget-content ui-corner-all" /></td>
     </tr>
     <tr>
-        <td><input type="text" id="url1-0" class="text ui-widget-content ui-corner-all" /></td>
-        <td><input type="text" id="url1-1" class="text ui-widget-content ui-corner-all" /></td>
+        <td><input type="text" id="l1" class="race_url text ui-widget-content ui-corner-all" /></td>
+        <td><input type="text" id="r1" class="race_url text ui-widget-content ui-corner-all" /></td>
+    </tr>
+    <tr>
+        <td><input type="text" id="l2" class="race_url text ui-widget-content ui-corner-all" /></td>
+        <td><input type="text" id="r2" class="race_url text ui-widget-content ui-corner-all" /></td>
+    </tr>
+    <tr>
+        <td><input type="text" id="l3" class="race_url text ui-widget-content ui-corner-all" /></td>
+        <td><input type="text" id="r3" class="race_url text ui-widget-content ui-corner-all" /></td>
+    </tr>
+    <tr>
+        <td><input type="text" id="l4" class="race_url text ui-widget-content ui-corner-all" /></td>
+        <td><input type="text" id="r4" class="race_url text ui-widget-content ui-corner-all" /></td>
     </tr>
     </table>
--->
 </div>
 
 <div id="data-form" style="display: none;">
