IE compatibility fixes

--- a/iframe.html
+++ b/iframe.html
@@ -13,7 +13,11 @@
     <script type="text/javascript" src="js/ui.js"></script>
 
 </head>
-<body>
+<!--[if !IE]>--><body class="W3C"><!--<![endif]-->
+<!--[if IE 8]><body class="IE IE8 IE78 IE678"><![endif]-->
+<!--[if IE 7]><body class="IE IE7 IE67 IE78 IE567 IE678"><![endif]-->
+<!--[if IE 6]><body class="IE IE6 IE56 IE67 IE567 IE678"><![endif]-->
+<!--[if IE 5]><body class="IE IE5 IE56 IE567"><![endif]-->
 
 <div id="header">
 
@@ -130,7 +134,7 @@
     </p>
     <div id="matchups">
         <button name="google.com:bing.com">Google vs Bing</button>
-        <button name="microsoft.com:apple.com">Microsoft vs Apple</button>
+        <button name="apple.com:adobe.com">Apple vs Adobe</button>
         <button name="www.amazon.com/s/ref=nb_sb_noss?url=search-alias%3Daps&field-keywords=shoes&x=0&y=0:www.shopzilla.com/shoes/search">Amazon vs Shopzilla: SHOES!</button>
         <button name="omg.com:tmz.com">TMZ vs OMG!</button>
     </div>
