Race is here! so remove the coming soon message.

--- a/iframe.html
+++ b/iframe.html
@@ -149,8 +149,7 @@
         Coming Soon:
     </p>
     <ul>
-        <li>Race multiple pages in a row.</li>
-        <li>API for gathering the results.</li>
+        <li>API for gathering results</li>
     </ul>
 </div>
 
