Add share link. Fix a bug where splash screen run wasn't having it's run key calculated properly.

--- a/iframe.html
+++ b/iframe.html
@@ -45,7 +45,9 @@
 
 </div>
 
-<div id="xfactor" class="overlay"><div></div></div>
+<div id="xfactor" class="overlay"><div></div> 
+<button id="share-link" style="position:absolute; top: 85px; right: 0;">share this test!</button>
+</div>
 <div id="average" class="overlay"><div></div></div>
 
 <div class="frame" id="div0" style="float:left">
@@ -157,6 +159,15 @@
         an accurate comparison.
         Please either speak to the authors of the website or try
         a different matchup.
+    </p>
+</div>
+
+<div id="share" style="display: none;">
+    <p>
+        Copy this URL to share this test with someone else:
+    </p>
+    <p>
+        <textarea class="text ui-widget-content ui-corner-all"></textarea>
     </p>
 </div>
 
