Change site UI to use jQuery UI theme all throughout. Hopefully this sets it apart more from the sites under test.

--- a/iframe.html
+++ b/iframe.html
@@ -19,7 +19,7 @@
 <!--[if IE 6]><body class="IE IE6 IE56 IE67 IE567 IE678"><![endif]-->
 <!--[if IE 5]><body class="IE IE5 IE56 IE567"><![endif]-->
 
-<div id="header">
+<div id="header" class="ui-widget-content">
 
     <div id="features">
         <a id="repeat" href="#">Repeat</a>
@@ -33,12 +33,12 @@
     <div id="gobar">
     <div style="left:0;">
 
-        <input id="url0" type="text" class="text ui-widget-content ui-corner-all" value="" tabindex=1 />
+        <input id="url0" type="text" class="text ui-corner-all" value="" tabindex=1 />
 
     </div>
     <div style="right: 0;">
 
-        <input id="url1" type="text" class="text ui-widget-content ui-corner-all" value="" tabindex=2 />
+        <input id="url1" type="text" class="text ui-corner-all" value="" tabindex=2 />
         <button id="go" tabindex=3 >GO</button>
 
     </div>
@@ -123,7 +123,7 @@
     <p>
         What other formats would you want this in?
     </p>
-    <textarea></textarea>
+    <textarea class="textarea ui-corner-all"></textarea>
 </div>
 
 <div id="splash" style="display: none;">
