Added "logo" link that always points to your root. Added some text to the data dialog. Added support for setting serial/parallel mode from querystring.

--- a/iframe.html
+++ b/iframe.html
@@ -22,6 +22,7 @@
 <div id="header" class="ui-widget-content">
 
     <div id="features">
+        <div id="logo"><a href="http://whichloadsfaster.com">whichloadsfaster.com</a></div>
         <a id="repeat" href="#">Repeat</a>
         <a id="race" href="#">Race</a>
         <a id="data" href="#">Grab my data</a>
@@ -120,6 +121,11 @@
 </div>
 
 <div id="data-form" style="display: none;">
+    <p>
+        The data for each set of site's you've tested in this
+        session is listed under
+        the sharing link for that set.
+    </p>
     <p>
         What other formats would you want this in?
     </p>
