Added an about page.

--- a/iframe.html
+++ b/iframe.html
@@ -28,6 +28,7 @@
         <a id="data" href="#">Grab my data</a>
         <a id="splash-link" href="#">Splash screen</a>
         <a id="settings-link" href="#">Settings</a>
+        <a id="about-link" href="#">About</a>
         <div id="timeout"></div>
     </div>
 
@@ -122,12 +123,8 @@
 
 <div id="data-form" style="display: none;">
     <p>
-        The data for each set of site's you've tested in this
-        session is listed under
-        the sharing link for that set.
-    </p>
-    <p>
-        What other formats would you want this in?
+        In the box below is a sharing link for each matchup you've tried. 
+        Beneath the link is the data for that matchup in CSV format. 
     </p>
     <textarea class="textarea ui-corner-all"></textarea>
 </div>
@@ -198,6 +195,37 @@
         </dd>
 
     </dl>
+</div>
+
+<div id="about" style="display: none;">
+    <a href="http://github.com/ryanwitt/whichloadsfaster"><img style="position: absolute; top: 0; right: 0; border: 0;" src="img/github_ribbon.png" alt="Fork me on GitHub" /></a>
+
+    <h2>About this project</h2>
+    <p>
+    <b>whichloadsfaster</b> is a fun way to spread the word that
+    <a href="http://doeswebperformancematter.com/">
+        web performance matters</a>. 
+    It's about friendly competition and about testing in 
+    <i>everybody's</i> browser, not just ones that have
+    nice performance tools already.
+    </p>
+
+    </p>
+    <b>whichloadsfaster</b> is 
+    <a href="http://github.com/ryanwitt/whichloadsfaster">open source</a> and runs
+    entirely in your browser, with no backend to speak of. 
+    You can host the files on your own site and tweak them to suit your nefarious plans.
+    We'll even promise not to tell.
+    </p>
+
+    </p>
+    <b>whichloadsfaster</b> was conceived and written by 
+    <a href="http://onecreativeblog.com/">Ryan Witt</a> and supported by his employer,
+    <a href="http://fastsoft.com/">FastSoft Inc.</a>, where he is the "Software Development
+    Lead" or "Cat Herder, Level III", depending on who is ordering the business cards.
+    </p>
+    
+    <p>Supported by: <a href="http://fastsoft.com"><img style="vertical-align:top;" alt="FastSoft" src="img/fastsoft_logo.png" width="200"></a></p>
 </div>
 
 </body>
