Experiment to speed up themeswitcher.

--- a/iframe.html
+++ b/iframe.html
@@ -4,12 +4,14 @@
     <title>Which loads faster?</title>
 
     <link type="text/css" href="css/screen.css" rel="stylesheet" /> 
+    <!--link type="text/css" rel="stylesheet" href="http://jqueryui.com/themes/base/ui.all.css" /-->
     <link type="text/css" href="css/sunny/jquery-ui-1.8.custom.css" rel="stylesheet" />  
 
     <script type="text/javascript" src="js/jquery-1.4.2.min.js"></script>
     <script type="text/javascript" src="js/jquery-ui-1.8.custom.min.js"></script>
     <script type="text/javascript" src="js/jquery.url.js"></script>
     <script type="text/javascript" src="js/jquery.hotkeys.js"></script>
+    <script type="text/javascript" src="js/jquery.themeswitcher.js"></script>
     <script type="text/javascript" src="js/ui.js"></script>
 
 </head>
