Double framing experiment. Not working all that well at the moment (nytimes is very good at avoiding framing! they must have read the same papers as me).

--- a/iframe.html
+++ b/iframe.html
@@ -55,7 +55,7 @@
     <div class="frameblocker"></div>
 
     <button id="time0" class="load_time" tabindex=0></button>
-    <iframe id="frame0" tabindex=-1>one</iframe>
+    <iframe id="frame0" tabindex=-1 src="frame0.html?https://www.nytimes.com/">one</iframe>
 
 </div>
 
@@ -63,7 +63,7 @@
     <div class="frameblocker"></div>
 
     <button id="time1" class="load_time"></button>
-    <iframe id="frame1" tabindex=-1>two</iframe>
+    <iframe id="frame1" tabindex=-1 src="frame1.html?https://www.nytimes.com/">two</iframe>
 
 </div>
 
