Rearrange links at the top into logical groupings.

--- a/iframe.html
+++ b/iframe.html
@@ -23,12 +23,14 @@
 
     <div id="features">
         <div id="logo"><a href="http://whichloadsfaster.com">whichloadsfaster.com</a></div>
+        <a id="about-link" href="#">About</a>
+        <a id="settings-link" href="#">Settings</a>
+
+        <div id="features-divider">Features:</div>
         <a id="repeat" href="#">Repeat</a>
         <a id="race" href="#">Race</a>
         <a id="data" href="#">Grab my data</a>
         <a id="splash-link" href="#">Splash screen</a>
-        <a id="settings-link" href="#">Settings</a>
-        <a id="about-link" href="#">About</a>
         <div id="timeout"></div>
     </div>
 
