Remove the coming soon blurb.

--- a/iframe.html
+++ b/iframe.html
@@ -146,11 +146,8 @@
         <button name="omg.com:tmz.com">TMZ vs OMG!</button>
     </div>
     <p>
-        Coming Soon:
+        &nbsp;
     </p>
-    <ul>
-        <li>API for gathering results</li>
-    </ul>
 </div>
 
 <div id="framebuster" style="display: none;">
