Polish for the about dialog.

--- a/iframe.html
+++ b/iframe.html
@@ -196,35 +196,42 @@
     </dl>
 </div>
 
-<div id="about" style="display: none;">
-    <a href="http://github.com/ryanwitt/whichloadsfaster"><img style="position: absolute; top: 0; right: 0; border: 0;" src="img/github_ribbon.png" alt="Fork me on GitHub" /></a>
+<div id="about" style="display: none; ">
+    <a style="position: absolute; top: 0; right: 0; z-index: 10000;" href="http://github.com/ryanwitt/whichloadsfaster"><img src="img/github_ribbon.png" alt="Fork me on GitHub" /></a>
 
-    <h2>About this project</h2>
-    <p>
+    <h2>Why?</h2>
+    <p style="margin-right:2em;">
     <b>whichloadsfaster</b> is a fun way to spread the word that
-    <a href="http://doeswebperformancematter.com/">
-        web performance matters</a>. 
+    web performance 
+    <a href="http://doeswebperformancematter.com/">matters</a>. 
     It's about friendly competition and about testing in 
     <i>everybody's</i> browser, not just ones that have
     nice performance tools already.
     </p>
 
-    </p>
+    <h2>How?</h2>
+    <p>
     <b>whichloadsfaster</b> is 
-    <a href="http://github.com/ryanwitt/whichloadsfaster">open source</a> and runs
-    entirely in your browser, with no backend to speak of. 
-    You can host the files on your own site and tweak them to suit your nefarious plans.
-    We'll even promise not to tell.
+    <a href="http://github.com/ryanwitt/whichloadsfaster">open source</a>,
+    written in HTML and JavaScript and runs entirely on
+    the client-side. You can host the files on your own site
+    and tweak them to suit your own nefarious plans.
+    We promise not to tell.
     </p>
 
-    </p>
+    <h2>Who?</h2>
+    <p>
     <b>whichloadsfaster</b> was conceived and written by 
     <a href="http://onecreativeblog.com/">Ryan Witt</a> and supported by his employer,
-    <a href="http://fastsoft.com/">FastSoft Inc.</a>, where he is the "Software Development
-    Lead" or "Cat Herder, Level III", depending on who is ordering the business cards.
+    <a href="http://fastsoft.com/">FastSoft Inc</a>.
+    </p>
+
+    <p>
+    Questions, bug reports and ideas happen on the
+    <a href="mailto:whichloadsfaster@googlegroups.com">mailing list</a>.
     </p>
     
-    <p>Supported by: <a href="http://fastsoft.com"><img style="vertical-align:top;" alt="FastSoft" src="img/fastsoft_logo.png" width="200"></a></p>
+    <p>Supported by: <a href="http://fastsoft.com"><img style="vertical-align:top;" alt="FastSoft" src="img/fastsoft_logo.png"></a></p>
 </div>
 
 </body>
