--- a/iframe.html
+++ b/iframe.html
@@ -11,6 +11,7 @@
     <script type="text/javascript" src="js/jquery.url.js"></script>
     <script type="text/javascript" src="js/jquery.hotkeys.js"></script>
     <script type="text/javascript" src="js/ui.js"></script>
+    <script type="text/javascript" src="js/supersleight.plugin.js"></script>
 
 </head>
 <!--[if !IE]>--><body class="W3C"><!--<![endif]-->
