--- a/static/index.html
+++ b/static/index.html
@@ -6,12 +6,14 @@
     <link type="text/css" href="css/screen.css" rel="stylesheet" /> 
     <link type="text/css" href="css/sunny/jquery-ui-1.8.custom.css" rel="stylesheet" />  
 
+    <!--JAVASCRIPT-->
     <script type="text/javascript" src="js/jquery-1.4.2.min.js"></script>
     <script type="text/javascript" src="js/jquery-ui-1.8.custom.min.js"></script>
     <script type="text/javascript" src="js/jquery.url.js"></script>
     <script type="text/javascript" src="js/jquery.hotkeys.js"></script>
     <script type="text/javascript" src="js/ui.js"></script>
     <script type="text/javascript" src="js/supersleight.plugin.js"></script>
+    <!--END JAVASCRIPT (the above section gets replaced with all.js in production)-->
 
 </head>
 <!--[if !IE]>--><body class="W3C"><!--<![endif]-->
