Added yuicompressor and htmltidy. Cleaned up the makefile a bit.

--- a/static/index.html
+++ b/static/index.html
@@ -53,10 +53,10 @@
 
 </div>
 
-<div id="xfactor" class="overlay"><div></div> 
+<div id="xfactor" class="overlay"><div>&nbsp;</div> 
 <button id="share-link" style="position:absolute; top: 85px; right: 0;">share this test!</button>
 </div>
-<div id="average" class="overlay"><div></div></div>
+<div id="average" class="overlay"><div>&nbsp; </div></div>
 
 <div class="frame" id="div0" style="float:left">
     <div class="frameblocker"></div>
