--- a/static/index.html
+++ b/static/index.html
@@ -1,5 +1,6 @@
 <html>
 <head>
+    <meta http-equiv="Content-type" content="text/html; charset=utf-8" />
 
     <title>Which loads faster?</title>
 
