Link to the google groups page rather than a mailto: link.

--- a/static/index.html
+++ b/static/index.html
@@ -232,7 +232,7 @@
 
     <p>
     Questions, bug reports and ideas happen on the
-    <a href="mailto:whichloadsfaster@googlegroups.com">mailing list</a>.
+    <a href="http://groups.google.com/group/whichloadsfaster/">mailing list</a>.
     </p>
     
     <p>Supported by: <a href="http://fastsoft.com"><img style="vertical-align:top;" alt="FastSoft" src="img/fastsoft_logo.png"></a></p>
