Didn't have a noscript message. Whoops.

--- a/static/index.html
+++ b/static/index.html
@@ -23,6 +23,14 @@
 <!--[if IE 6]><body class="IE IE6 IE56 IE67 IE567 IE678"><![endif]-->
 <!--[if IE 5]><body class="IE IE5 IE56 IE567"><![endif]-->
 
+<noscript>
+<div id="noscript" class="ui-widget-overlay">
+<h1>
+This site is a JavaScript application. Please enable JavaScript or use a browser that supports it.
+</h1>
+</div>
+</noscript>
+
 <div id="header" class="ui-widget-content">
 
     <div id="features">
