--- a/static/index.html
+++ b/static/index.html
@@ -155,10 +155,10 @@ This site is a JavaScript application. Please enable JavaScript or use a browser
         Try one of these epic matchups to get started:
     </p>
     <div id="matchups">
-        <button name="google.com:bing.com">Google vs Bing</button>
-        <button name="apple.com:adobe.com">Apple vs Adobe</button>
-        <button name="www.amazon.com/s/ref=nb_sb_noss?url=search-alias%3Daps&field-keywords=shoes&x=0&y=0:www.shopzilla.com/shoes/search">Amazon vs Shopzilla: SHOES!</button>
-        <button name="omg.com:tmz.com">TMZ vs OMG!</button>
+        <button name="d.fastsoft.com/www.latimes.com/index.html?ModPagespeed=on&ModPagespeedFilters=extend_cache,rewrite_domains,inline_javascript,inline_css,inline_images,combine_css,combine_javascript,rewrite_css,rewrite_javascript,rewrite_images,inline_images:d.fastsoft.com%3A81/www.latimes.com/index.html">FEO+OCA vs Unaccelerated</button>
+        <button name="d.fastsoft.com/www.latimes.com/index.html:d.fastsoft.com%3A81/www.latimes.com/index.html">OCA vs Unaccelerated</button>
+        <button name="d.fastsoft.com%3A81/www.latimes.com/index.html?ModPagespeed=on&ModPagespeedFilters=extend_cache,rewrite_domains,inline_javascript,inline_css,inline_images,combine_css,combine_javascript,rewrite_css,rewrite_javascript,rewrite_images,inline_images:d.fastsoft.com%3A81/www.latimes.com/index.html">FEO vs Unaccelerated</button>
+        <button name="d.fastsoft.com%3A81/www.latimes.com/index.html?ModPagespeed=on&ModPagespeedFilters=extend_cache,rewrite_domains,inline_javascript,inline_css,inline_images,combine_css,combine_javascript,rewrite_css,rewrite_javascript,rewrite_images,inline_images:d.fastsoft.com/www.latimes.com/index.html">FEO vs OCA</button>
     </div>
     <p>
         &nbsp;
