ms->s, add labels for known urls, allow serial launch from direct url, fix uri encoding bug

--- a/static/index.html
+++ b/static/index.html
@@ -74,6 +74,7 @@ This site is a JavaScript application. Please enable JavaScript or use a browser
     <div class="frameblocker"></div>
 
     <button id="time0" class="load_time" tabindex=0></button>
+    <div id="name0" class="name" tabindex=0></div>
     <iframe id="frame0" tabindex=-1>one</iframe>
 
 </div>
@@ -82,6 +83,7 @@ This site is a JavaScript application. Please enable JavaScript or use a browser
     <div class="frameblocker"></div>
 
     <button id="time1" class="load_time"></button>
+    <div id="name1" class="name" tabindex=0></div>
     <iframe id="frame1" tabindex=-1>two</iframe>
 
 </div>
