Bugfixes for velocity demo

--- a/static/index.html
+++ b/static/index.html
@@ -156,11 +156,20 @@ This site is a JavaScript application. Please enable JavaScript or use a browser
     <p>
         Try one of these epic matchups to get started:
     </p>
+    <b> LA Times Front Page </b>
     <div id="matchups">
-        <button name="d.fastsoft.com/www.latimes.com/index.html?ModPagespeed=on&ModPagespeedFilters=extend_cache,rewrite_domains,inline_javascript,inline_css,inline_images,combine_css,combine_javascript,rewrite_css,rewrite_javascript,rewrite_images,inline_images:d.fastsoft.com%3A81/www.latimes.com/index.html">FEO+OCA vs Unaccelerated</button>
-        <button name="d.fastsoft.com/www.latimes.com/index.html:d.fastsoft.com%3A81/www.latimes.com/index.html">OCA vs Unaccelerated</button>
-        <button name="d.fastsoft.com%3A81/www.latimes.com/index.html?ModPagespeed=on&ModPagespeedFilters=extend_cache,rewrite_domains,inline_javascript,inline_css,inline_images,combine_css,combine_javascript,rewrite_css,rewrite_javascript,rewrite_images,inline_images:d.fastsoft.com%3A81/www.latimes.com/index.html">FEO vs Unaccelerated</button>
-        <button name="d.fastsoft.com%3A81/www.latimes.com/index.html?ModPagespeed=on&ModPagespeedFilters=extend_cache,rewrite_domains,inline_javascript,inline_css,inline_images,combine_css,combine_javascript,rewrite_css,rewrite_javascript,rewrite_images,inline_images:d.fastsoft.com/www.latimes.com/index.html">FEO vs OCA</button>
+        <button name="d.fastsoft.com/www.latimes.com/index.html?ModPagespeed=on&ModPagespeedFilters=rewrite_domains,inline_javascript,inline_css,inline_images,combine_css,combine_javascript,rewrite_css,rewrite_javascript,rewrite_images,extend_cache:d.fastsoft.com%3A82/www.latimes.com/index.html">FEO+OCA vs Unaccelerated</button>
+        <button name="d.fastsoft.com/www.latimes.com/index.html:d.fastsoft.com%3A82/www.latimes.com/index.html">OCA vs Unaccelerated</button>
+        <button name="d.fastsoft.com%3A81/www.latimes.com/index.html?ModPagespeed=on&ModPagespeedFilters=rewrite_domains,inline_javascript,inline_css,inline_images,combine_css,combine_javascript,rewrite_css,rewrite_javascript,rewrite_images,extend_cache:d.fastsoft.com%3A82/www.latimes.com/index.html">FEO vs Unaccelerated</button>
+        <button name="d.fastsoft.com%3A81/www.latimes.com/index.html?ModPagespeed=on&ModPagespeedFilters=rewrite_domains,inline_javascript,inline_css,inline_images,combine_css,combine_javascript,rewrite_css,rewrite_javascript,rewrite_images,extend_cache:d.fastsoft.com/www.latimes.com/index.html">FEO vs OCA</button>
+    </div>
+    <br>
+    <b> LA Times Entertainment </b>
+    <div id="matchups">
+        <button name="d.fastsoft.com/latmov/www.latimes.com/entertainment/news/movies/index.html?ModPagespeed=on&ModPagespeedFilters=rewrite_domains,inline_javascript,inline_css,inline_images,combine_css,combine_javascript,rewrite_css,rewrite_javascript,rewrite_images,extend_cache:d.fastsoft.com%3A82/latmov/www.latimes.com/entertainment/news/movies/index.html">FEO+OCA vs Unaccelerated</button>
+        <button name="d.fastsoft.com/latmov/www.latimes.com/entertainment/news/movies/index.html:d.fastsoft.com%3A82/latmov/www.latimes.com/entertainment/news/movies/index.html">OCA vs Unaccelerated</button>
+        <button name="d.fastsoft.com%3A81/latmov/www.latimes.com/entertainment/news/movies/index.html?ModPagespeed=on&ModPagespeedFilters=rewrite_domains,inline_javascript,inline_css,inline_images,combine_css,combine_javascript,rewrite_css,rewrite_javascript,rewrite_images,extend_cache:d.fastsoft.com%3A82/latmov/www.latimes.com/entertainment/news/movies/index.html">FEO vs Unaccelerated</button>
+        <button name="d.fastsoft.com%3A81/latmov/www.latimes.com/entertainment/news/movies/index.html?ModPagespeed=on&ModPagespeedFilters=rewrite_domains,inline_javascript,inline_css,inline_images,combine_css,combine_javascript,rewrite_css,rewrite_javascript,rewrite_images,extend_cache:d.fastsoft.com/latmov/www.latimes.com/entertainment/news/movies/index.html">FEO vs OCA</button>
     </div>
     <p>
         &nbsp;
@@ -234,8 +243,8 @@ showslow.com</a></b> lets you share and compare
         <dt>Page Loading Mode</dt>
         <dd>
             <div id="serial_parallel">
-            <input id="parallel" value="parallel" name="serial" type="radio" checked="checked" /> <label for="parallel">Parallel (default)</label>
-            <input id="serial" value="serial" name="serial" type="radio" /> <label for="serial">Serial</label>
+            <input id="parallel" value="parallel" name="serial" type="radio" /> <label for="parallel">Parallel</label>
+            <input id="serial" value="serial" name="serial" type="radio" checked="checked" /> <label for="serial">Serial (default)</label>
             </div>
         </dt>
             <p>Select serial mode to load one side at a time to eliminate the possibility that the two sides will interfere with each other.</p>
@@ -282,7 +291,7 @@ showslow.com</a></b> lets you share and compare
     <p>Supported by: <a href="http://fastsoft.com"><img style="vertical-align:top;" alt="FastSoft" src="img/fastsoft_logo.png"></a></p>
 </div>
 
-<script type="text/javascript">
+<!--script type="text/javascript">
 var clicky = { log: function(){ return; }, goal: function(){ return; }};
 var clicky_site_id = 228919;
 (function() {
@@ -304,7 +313,7 @@ var clicky_site_id = 228919;
     ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
     var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
   })();
-</script>
+</script-->
 
 </body>
 </html>
